--- a/Finish/GoogleMaps_details_reviews.ipynb
+++ b/Finish/GoogleMaps_details_reviews.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4788773a",
+   "id": "ac830ec3",
    "metadata": {},
    "source": [
     "## 使用套件"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5176dbe9",
+   "id": "a593997d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc284d8d",
+   "id": "fd5aa34c",
    "metadata": {},
    "source": [
     "#### URL列表"
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bda245b4",
+   "id": "14e40f4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0573ae7a",
+   "id": "035f629f",
    "metadata": {},
    "source": [
     "## 店家詳細資訊"
@@ -64,8 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "77b3722b",
+   "execution_count": 32,
+   "id": "524047d7",
    "metadata": {},
    "outputs": [
     {
@@ -76,6 +76,7 @@
       "店名: 凪Nagi 忠孝店\n",
       "評論數: 3,543\n",
       "星級: 4.3\n",
+      "標籤: 拉麵店\n",
       "地址:  106台北市大安區大安路一段75巷5號1\n",
       "電話:  02 2778 1899\n",
       "營業時間: 星期五、11:30 到 20:00; 星期六、11:30 到 20:00; 星期日、11:30 到 20:00; 星期一、11:30 到 20:00; 星期二、11:30 到 20:00; 星期三、11:30 到 20:00; 星期四、11:30 到 20:00. 隱藏本週營業時間\n",
@@ -136,6 +137,14 @@
     "    total_rating = \"\"\n",
     "print('星級: ' + total_rating)\n",
     "\n",
+    "# 標籤\n",
+    "category = rating_and_review_div.find('button',{'jsaction':re.compile(\"pane.rating.category\")})\n",
+    "if category:\n",
+    "    category = category.getText()\n",
+    "if not category:\n",
+    "    category = \"\"\n",
+    "print('標籤: ' + category)\n",
+    "\n",
     "# # 價位\n",
     "# total_rating = rating_and_review_div.find('span',{'aria-label':re.compile(\"價位$\")})\n",
     "# if total_rating:\n",
@@ -182,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e36de873",
+   "id": "d449841a",
    "metadata": {},
    "source": [
     "## 評論爬取"
@@ -191,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f8b4761c",
+   "id": "6ddc468e",
    "metadata": {},
    "outputs": [
     {
