--- a/Finish/GoogleMaps_details_reviews.ipynb
+++ b/Finish/GoogleMaps_details_reviews.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ac830ec3",
+   "id": "e374a1cb",
    "metadata": {},
    "source": [
     "## 使用套件"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a593997d",
+   "id": "3ddb9bf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd5aa34c",
+   "id": "2455ad01",
    "metadata": {},
    "source": [
     "#### URL列表"
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14e40f4e",
+   "id": "f3f24211",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "035f629f",
+   "id": "6f1cfc06",
    "metadata": {},
    "source": [
     "## 店家詳細資訊"
@@ -64,8 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "524047d7",
+   "execution_count": 33,
+   "id": "885c8348",
    "metadata": {},
    "outputs": [
     {
@@ -77,6 +77,7 @@
       "評論數: 3,543\n",
       "星級: 4.3\n",
       "標籤: 拉麵店\n",
+      "價位: $$\n",
       "地址:  106台北市大安區大安路一段75巷5號1\n",
       "電話:  02 2778 1899\n",
       "營業時間: 星期五、11:30 到 20:00; 星期六、11:30 到 20:00; 星期日、11:30 到 20:00; 星期一、11:30 到 20:00; 星期二、11:30 到 20:00; 星期三、11:30 到 20:00; 星期四、11:30 到 20:00. 隱藏本週營業時間\n",
@@ -145,14 +146,13 @@
     "    category = \"\"\n",
     "print('標籤: ' + category)\n",
     "\n",
-    "# # 價位\n",
-    "# total_rating = rating_and_review_div.find('span',{'aria-label':re.compile(\"價位$\")})\n",
-    "# if total_rating:\n",
-    "#     total_rating = total_rating.get('aria-label','').strip() \n",
-    "#     total_rating = total_rating.removesuffix('星級').strip()\n",
-    "# if not total_rating:\n",
-    "#     total_rating = \"\"\n",
-    "# print('星級: ' + total_rating)\n",
+    "# 價位\n",
+    "price = rating_and_review_div.find('span',{'aria-label':re.compile(\"^價格\")})\n",
+    "if price:\n",
+    "    price = price.getText()\n",
+    "if not price:\n",
+    "    price = \"\"\n",
+    "print('價位: ' + price)\n",
     "\n",
     "# 地址\n",
     "address = rating_and_review_div.find('button',{'aria-label':re.compile(\"^地址\\:\")})\n",
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d449841a",
+   "id": "99a57ef2",
    "metadata": {},
    "source": [
     "## 評論爬取"
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6ddc468e",
+   "id": "a7a674fb",
    "metadata": {},
    "outputs": [
     {
