--- a/Finish/GoogleMaps_details_reviews.ipynb
+++ b/Finish/GoogleMaps_details_reviews.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e374a1cb",
+   "id": "04d8fce3",
    "metadata": {},
    "source": [
     "## 使用套件"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3ddb9bf1",
+   "id": "50f8513e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2455ad01",
+   "id": "dd2d2029",
    "metadata": {},
    "source": [
     "#### URL列表"
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3f24211",
+   "id": "52138e33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f1cfc06",
+   "id": "df5966b9",
    "metadata": {},
    "source": [
     "## 店家詳細資訊"
@@ -64,8 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "885c8348",
+   "execution_count": 34,
+   "id": "46397536",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
     "print('電話: ' + phone)\n",
     "\n",
     "# 營業時間\n",
-    "opening_hours = rating_and_review_div.find('div',{'aria-label':re.compile(\"(星期.、(24 小時營業)?(休息)?(\\d+:\\d+ 到 \\d+:\\d+(、\\d+:\\d+ 到 \\d+:\\d+)?)?;? ?){7}\")})\n",
+    "opening_hours = rating_and_review_div.find('div',{'aria-label':re.compile(\"^星期\")})\n",
     "if opening_hours:\n",
     "    opening_hours = opening_hours.get('aria-label','')   \n",
     "if not opening_hours:\n",
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99a57ef2",
+   "id": "da7f180b",
    "metadata": {},
    "source": [
     "## 評論爬取"
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a7a674fb",
+   "id": "4b9092e0",
    "metadata": {},
    "outputs": [
     {
