--- a/Finish/GoogleMaps_details_reviews.ipynb
+++ b/Finish/GoogleMaps_details_reviews.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "04d8fce3",
+   "id": "6bcfbbb1",
    "metadata": {},
    "source": [
     "## 使用套件"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "50f8513e",
+   "id": "ea3c886c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd2d2029",
+   "id": "17f4ec9f",
    "metadata": {},
    "source": [
     "#### URL列表"
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52138e33",
+   "id": "8ea846e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df5966b9",
+   "id": "c5e188e1",
    "metadata": {},
    "source": [
     "## 店家詳細資訊"
@@ -64,8 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "46397536",
+   "execution_count": 35,
+   "id": "7eb0db33",
    "metadata": {},
    "outputs": [
     {
@@ -91,12 +91,10 @@
     "    try:\n",
     "        print(\"Initializing chromedriver.\")\n",
     "        options = Options()\n",
-    "#         options.add_argument(f'--user-data-dir={google_session_profile}')\n",
     "        options.add_argument(\"--start-maximized\")\n",
     "        options.add_argument(\"--incognito\")\n",
     "        options.add_argument(\"--disable-gpu\")\n",
     "        options.add_argument('--log-level=3')\n",
-    "        #options.add_argument('--blink-settings=imagesEnabled=false')\n",
     "        driver = uc.Chrome(options=options)\n",
     "        time.sleep(2)\n",
     "        return True\n",
@@ -186,12 +184,31 @@
     "    website = website.get('href')   \n",
     "if not website:\n",
     "    website = \"\"\n",
-    "print('網站: ' + website)"
+    "print('網站: ' + website)\n",
+    "\n",
+    "\n",
+    "place_data = []\n",
+    "info_dict = {}        \n",
+    "info_dict['店名'] = alias\n",
+    "info_dict['評論數'] =  total_reviews             \n",
+    "info_dict[\"星級\"] = total_rating\n",
+    "info_dict[\"標籤\"] = category\n",
+    "info_dict['價位'] = price\n",
+    "info_dict['地址'] =  address             \n",
+    "info_dict[\"電話\"] = phone\n",
+    "info_dict[\"營業時間\"] = opening_hours\n",
+    "info_dict[\"網站\"] = website\n",
+    "\n",
+    "place_data.append(info_dict)\n",
+    "\n",
+    "place_info_header = list(place_data[0].keys())\n",
+    "place_info_df = pd.DataFrame.from_records(place_data,columns=place_info_header)\n",
+    "place_info_df.to_csv('./test_place.csv')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "da7f180b",
+   "id": "ed3b2fa8",
    "metadata": {},
    "source": [
     "## 評論爬取"
@@ -200,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4b9092e0",
+   "id": "d33d77f1",
    "metadata": {},
    "outputs": [
     {
