--- a/Finish/GoogleMaps_details_reviews.ipynb
+++ b/Finish/GoogleMaps_details_reviews.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6bcfbbb1",
+   "id": "ea44aa99",
    "metadata": {},
    "source": [
     "## 使用套件"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ea3c886c",
+   "id": "1ac864d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17f4ec9f",
+   "id": "df8b108e",
    "metadata": {},
    "source": [
     "#### URL列表"
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ea846e2",
+   "id": "d6b8af1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5e188e1",
+   "id": "a6a75c4c",
    "metadata": {},
    "source": [
     "## 店家詳細資訊"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "7eb0db33",
+   "id": "58134442",
    "metadata": {},
    "outputs": [
     {
@@ -203,12 +203,12 @@
     "\n",
     "place_info_header = list(place_data[0].keys())\n",
     "place_info_df = pd.DataFrame.from_records(place_data,columns=place_info_header)\n",
-    "place_info_df.to_csv('./test_place.csv')"
+    "place_info_df.to_csv(f'./{alias}_place_info.csv')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ed3b2fa8",
+   "id": "550530fb",
    "metadata": {},
    "source": [
     "## 評論爬取"
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d33d77f1",
+   "id": "740d0dca",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
     "        \n",
     "reviews_info_header = list(reviewData[0].keys())\n",
     "reviews_info_df = pd.DataFrame.from_records(reviewData,columns=reviews_info_header)\n",
-    "reviews_info_df.to_csv('./test.csv')"
+    "reviews_info_df.to_csv(f'./{alias}_review.csv')"
    ]
   }
  ],
