--- a/reviews.ipynb
+++ b/reviews.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "bd31e027",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 104,
    "id": "0160988f",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "e54df267",
    "metadata": {},
    "outputs": [],
@@ -167,6 +167,7 @@
     "        options.add_argument(\"--start-maximized\")\n",
     "        options.add_argument(\"--incognito\")\n",
     "        options.add_argument(\"--disable-gpu\")\n",
+    "        options.add_argument(\"--headless\")\n",
     "        options.add_argument('--log-level=3')\n",
     "        driver = uc.Chrome(options=options)\n",
     "        time.sleep(2)\n",
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "id": "c37609a1",
    "metadata": {},
    "outputs": [],
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 79,
    "id": "a3c549fa",
    "metadata": {},
    "outputs": [
@@ -312,105 +313,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initializing chromedriver.\n",
-      "完成店名: 魚の棧(魚之棧)\n",
-      "完成店名: 蕃茄妹小吃店\n",
-      "完成店名: 阿仁炒飯\n",
-      "完成店名: •壹柒食堂•\n",
-      "完成店名: 巴八八小吃店\n",
-      "完成店名: 鐵板城現炒（大龍店）\n",
-      "完成店名: 李記雞窩/大同美食/大同雞肉/大同便當/大同小吃/大同餐廳/大同放山雞\n",
-      "完成店名: 大牛牛排館\n",
-      "完成店名: 大龍街香菇肉粥\n",
-      "完成店名: 大龍廣東粥\n",
-      "完成店名: 大雄香雞翅\n",
-      "完成店名: 大龍峒肉羹-米粉湯\n",
-      "完成店名: 老地方牛肉麵食館\n",
-      "完成店名: 炸G行家-大龍峒店（炸雞行家.美式炸雞.平價美食）\n",
-      "完成店名: 三大牛肉麵\n",
-      "完成店名: 開燈找餐\n",
-      "完成店名: 大高雄燒肉飯\n",
-      "完成店名: 蕼蒔荳留\n",
-      "完成店名: 大龍沙威瑪\n",
-      "完成店名: 第一土鵝肉\n",
-      "完成店名: 小林麵食店\n",
-      "完成店名: 湯竺麵食館\n",
-      "完成店名: 大龍城自助餐\n",
-      "完成店名: 台南東山鴨頭\n",
-      "完成店名: 大肥羴燒烤羊肉轉型（古早味麵店）\n",
-      "完成店名: 簡家大龍峒肉圓\n",
-      "完成店名: 大眾海鮮粥\n",
-      "完成店名: 雙連 文記花枝焿\n",
-      "完成店名: 老蔡水煎包 大龍創始店\n",
-      "完成店名: 吉祥素食\n",
-      "完成店名: 重慶豆漿炸蛋餅\n",
-      "完成店名: 272早午餐\n",
-      "完成店名: 吉利 牛肉麵.水餃\n",
-      "完成店名: 大龍峒魚丸\n",
-      "完成店名: 叁道街手工蚵仔麵線\n",
-      "完成店名: 三媽臭臭鍋\n",
-      "完成店名: 大龍街271號黃金地瓜QQ球\n",
-      "完成店名: 金好呷好吃雞肉飯\n",
-      "完成店名: 新口味鹽酥雞\n",
-      "完成店名: 全龍健康素食\n",
-      "完成店名: 尚品香早餐店（大龍店）\n",
-      "完成店名: 小里子海鮮\n",
-      "完成店名: 雲祥麵食\n",
-      "完成店名: 京品廣東粥\n",
-      "完成店名: 潮味決‧湯滷專門店 台北大龍分社\n",
-      "完成店名: 唐山婆古早味炸肉\n",
-      "完成店名: 大龍早午餐\n",
-      "完成店名: 大龍峒熊會長油飯\n",
-      "完成店名: 大龍街夜市-廟口的飯\n",
-      "完成店名: 果然文創\n",
-      "完成店名: 大龍峒一生懸命黑白切\n",
-      "完成店名: 梅滿美食\n",
-      "完成店名: 讚賞麵屋\n",
-      "完成店名: 弘爺漢堡\n",
-      "完成店名: 德龍飲食店\n",
-      "完成店名: 寶師傅私房牛肉麵\n",
-      "完成店名: 第一茗狀元糕\n",
-      "完成店名: 萬世香小籠包豆漿店\n",
-      "完成店名: 老麵店\n",
-      "完成店名: Q Burger 大同大龍店\n",
-      "完成店名: 圓環魯肉飯肉羹/大同區小吃 大同區美食 大同區滷肉飯 圓山美食 圓山小吃 圓山滷肉飯\n",
-      "完成店名: 油條花生湯\n",
-      "完成店名: 5味臭臭鍋 大龍店\n",
-      "完成店名: 小漢堡早餐\n",
-      "完成店名: Camilla Breakfast\n",
-      "完成店名: 便當及古早味什錦麵\n",
-      "完成店名: 大龍街夜市\n",
-      "完成店名: MILI 米麗廚房 大龍店\n",
-      "完成店名: 美又堡\n",
-      "完成店名: 舉人豆花\n",
-      "完成店名: JOMO Coffee Roaster 大龍店\n",
-      "完成店名: PASTA RISOTTO\n",
-      "完成店名: 讚好吃古早味雞蛋糕\n",
-      "完成店名: 美珍豆漿早餐店\n",
-      "完成店名: 綠境 Aroma\n",
-      "完成店名: 大叔食事\n",
-      "完成店名: 大龍街鹹水雞 麻辣雞\n",
-      "完成店名: 油飯小吃麵店\n",
-      "完成店名: 傳統香滷味\n",
-      "完成店名: 李記川味小吃店\n",
-      "完成店名: 川婆娘四川麻辣燙加熱滷味\n",
-      "完成店名: 巨林美而美\n",
-      "完成店名: 日式日本風味料理\n",
-      "完成店名: 美立美早餐店\n",
-      "完成店名: 大龍街阿忠碳烤店\n",
-      "完成店名: 漁陶屋 日式料理\n",
-      "完成店名: 小鳳米粉湯\n",
-      "完成店名: 大龍街米粉湯\n",
-      "完成店名: 大龍峒阿嬤麵線店\n",
-      "完成店名: 裴記冷凍手工水餃\n",
-      "完成店名: 下路仔米苔目\n",
-      "完成店名: 八方雲集 (台北大龍店)\n",
-      "完成店名: D.G. Café\n",
-      "完成店名: 甜在心地瓜QQ球\n",
-      "完成店名: 牛奶好棒\n",
-      "完成店名: 鍋戰の物-大龍店\n",
-      "完成店名: KONMUSU日式飯糰（搬家中十一月底再開）\n",
-      "執行總花費時間: 278.22398829460144\n"
+      "Initializing chromedriver.\n"
+     ]
+    },
+    {
+     "ename": "InvalidArgumentException",
+     "evalue": "Message: invalid argument\n  (Session info: headless chrome=107.0.5304.107)\nStacktrace:\nBacktrace:\n\tOrdinal0 [0x0063ACD3+2075859]\n\tOrdinal0 [0x005CEE61+1633889]\n\tOrdinal0 [0x004CB680+571008]\n\tOrdinal0 [0x004BE8FE+518398]\n\tOrdinal0 [0x004BD2A3+512675]\n\tOrdinal0 [0x004BD5AD+513453]\n\tOrdinal0 [0x004CD0CE+577742]\n\tOrdinal0 [0x0052BC7D+965757]\n\tOrdinal0 [0x0051731C+881436]\n\tOrdinal0 [0x0052B56A+963946]\n\tOrdinal0 [0x00517136+880950]\n\tOrdinal0 [0x004EFEFD+720637]\n\tOrdinal0 [0x004F0F3F+724799]\n\tGetHandleVerifier [0x008EEED2+2769538]\n\tGetHandleVerifier [0x008E0D95+2711877]\n\tGetHandleVerifier [0x006CA03A+521194]\n\tGetHandleVerifier [0x006C8DA0+516432]\n\tOrdinal0 [0x005D682C+1665068]\n\tOrdinal0 [0x005DB128+1683752]\n\tOrdinal0 [0x005DB215+1683989]\n\tOrdinal0 [0x005E6484+1729668]\n\tBaseThreadInitThunk [0x76D7FEF9+25]\n\tRtlGetAppContainerNamedObjectPath [0x77557BBE+286]\n\tRtlGetAppContainerNamedObjectPath [0x77557B8E+238]\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mInvalidArgumentException\u001b[0m                  Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [79]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m time1 \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[1;32m----> 2\u001b[0m \u001b[43mplace_info\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m執行總花費時間: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtime\u001b[38;5;241m.\u001b[39mtime() \u001b[38;5;241m-\u001b[39m time1\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "Input \u001b[1;32mIn [15]\u001b[0m, in \u001b[0;36mplace_info\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m place_data \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m url_list:\n\u001b[1;32m----> 5\u001b[0m     \u001b[43mdriver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m     response \u001b[38;5;241m=\u001b[39m driver\u001b[38;5;241m.\u001b[39mpage_source\n\u001b[0;32m      7\u001b[0m     soup \u001b[38;5;241m=\u001b[39m BeautifulSoup(response, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhtml.parser\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\undetected_chromedriver\\__init__.py:505\u001b[0m, in \u001b[0;36mChrome._configure_headless.<locals>.get_wrapped\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    488\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mexecute_cdp_cmd(\n\u001b[0;32m    489\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNetwork.setUserAgentOverride\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    490\u001b[0m         {\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    494\u001b[0m         },\n\u001b[0;32m    495\u001b[0m     )\n\u001b[0;32m    496\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mexecute_cdp_cmd(\n\u001b[0;32m    497\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPage.addScriptToEvaluateOnNewDocument\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    498\u001b[0m         {\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    503\u001b[0m         },\n\u001b[0;32m    504\u001b[0m     )\n\u001b[1;32m--> 505\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m orig_get(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\undetected_chromedriver\\__init__.py:543\u001b[0m, in \u001b[0;36mChrome.get\u001b[1;34m(self, url)\u001b[0m\n\u001b[0;32m    541\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_cdc_props():\n\u001b[0;32m    542\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_hook_remove_cdc_props()\n\u001b[1;32m--> 543\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43murl\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:441\u001b[0m, in \u001b[0;36mWebDriver.get\u001b[1;34m(self, url)\u001b[0m\n\u001b[0;32m    437\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget\u001b[39m(\u001b[38;5;28mself\u001b[39m, url: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    438\u001b[0m     \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    439\u001b[0m \u001b[38;5;124;03m    Loads a web page in the current browser session.\u001b[39;00m\n\u001b[0;32m    440\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 441\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mCommand\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mGET\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43murl\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43murl\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:429\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    427\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_executor\u001b[38;5;241m.\u001b[39mexecute(driver_command, params)\n\u001b[0;32m    428\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response:\n\u001b[1;32m--> 429\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43merror_handler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    430\u001b[0m     response[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_unwrap_value(\n\u001b[0;32m    431\u001b[0m         response\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[0;32m    432\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
+      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py:243\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    241\u001b[0m         alert_text \u001b[38;5;241m=\u001b[39m value[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124malert\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    242\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[38;5;66;03m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[1;32m--> 243\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
+      "\u001b[1;31mInvalidArgumentException\u001b[0m: Message: invalid argument\n  (Session info: headless chrome=107.0.5304.107)\nStacktrace:\nBacktrace:\n\tOrdinal0 [0x0063ACD3+2075859]\n\tOrdinal0 [0x005CEE61+1633889]\n\tOrdinal0 [0x004CB680+571008]\n\tOrdinal0 [0x004BE8FE+518398]\n\tOrdinal0 [0x004BD2A3+512675]\n\tOrdinal0 [0x004BD5AD+513453]\n\tOrdinal0 [0x004CD0CE+577742]\n\tOrdinal0 [0x0052BC7D+965757]\n\tOrdinal0 [0x0051731C+881436]\n\tOrdinal0 [0x0052B56A+963946]\n\tOrdinal0 [0x00517136+880950]\n\tOrdinal0 [0x004EFEFD+720637]\n\tOrdinal0 [0x004F0F3F+724799]\n\tGetHandleVerifier [0x008EEED2+2769538]\n\tGetHandleVerifier [0x008E0D95+2711877]\n\tGetHandleVerifier [0x006CA03A+521194]\n\tGetHandleVerifier [0x006C8DA0+516432]\n\tOrdinal0 [0x005D682C+1665068]\n\tOrdinal0 [0x005DB128+1683752]\n\tOrdinal0 [0x005DB215+1683989]\n\tOrdinal0 [0x005E6484+1729668]\n\tBaseThreadInitThunk [0x76D7FEF9+25]\n\tRtlGetAppContainerNamedObjectPath [0x77557BBE+286]\n\tRtlGetAppContainerNamedObjectPath [0x77557B8E+238]\n"
      ]
     }
    ],
