--- a/reviews.ipynb
+++ b/reviews.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "id": "bd31e027",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "id": "07878a05",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "id": "e54df267",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "id": "c37609a1",
    "metadata": {},
    "outputs": [],
@@ -289,7 +289,7 @@
     "        if close == \"永久停業\" or close == \"暫時關閉\":\n",
     "            num += 1\n",
     "            continue\n",
-    "        if total_reviews == 0:\n",
+    "        if total_reviews == \"\":\n",
     "            num += 1\n",
     "            continue\n",
     "        \n",
@@ -340,9 +340,9 @@
     "                    break\n",
     "            else:\n",
     "                break\n",
-    "        if not json_data.get('other_user_review'):\n",
-    "            num += 1\n",
-    "            continue\n",
+    "#         if not json_data.get('other_user_review'):\n",
+    "#             num += 1\n",
+    "#             continue\n",
     "            \n",
     "        reviews_info_header = list(reviewData[0].keys())\n",
     "        reviews_info_df = pd.DataFrame.from_records(reviewData,columns=reviews_info_header)\n",
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "id": "a3c549fa",
    "metadata": {
     "scrolled": true
@@ -366,182 +366,101 @@
      "output_type": "stream",
      "text": [
       "Initializing chromedriver.\n",
-      "1 完成店名(info): 魚の棧(魚之棧)\n",
-      "1 完成店名(review)魚の棧(魚之棧)\n",
-      "2 完成店名(info): 蕃茄妹小吃店\n",
-      "2 完成店名(review)蕃茄妹小吃店\n",
-      "3 完成店名(info): 阿仁炒飯\n",
-      "3 完成店名(review)阿仁炒飯\n",
-      "4 完成店名(info): •壹柒食堂•\n",
-      "4 完成店名(review)•壹柒食堂•\n",
-      "5 完成店名(info): 巴八八小吃店\n",
-      "6 完成店名(info): 鐵板城現炒（大龍店）\n",
-      "6 完成店名(review)鐵板城現炒（大龍店）\n",
-      "7 完成店名(info): 李記雞窩/大同美食/大同雞肉/大同便當/大同小吃/大同餐廳/大同放山雞\n",
-      "7 完成店名(review)李記雞窩/大同美食/大同雞肉/大同便當/大同小吃/大同餐廳/大同放山雞\n",
-      "8 完成店名(info): 大牛牛排館\n",
-      "8 完成店名(review)大牛牛排館\n",
-      "9 完成店名(info): 大龍街香菇肉粥\n",
-      "9 完成店名(review)大龍街香菇肉粥\n",
-      "10 完成店名(info): 大龍廣東粥\n",
-      "10 完成店名(review)大龍廣東粥\n",
-      "11 完成店名(info): 大雄香雞翅\n",
-      "12 完成店名(info): 大龍峒肉羹-米粉湯\n",
-      "12 完成店名(review)大龍峒肉羹-米粉湯\n",
-      "13 完成店名(info): 老地方牛肉麵食館\n",
-      "13 完成店名(review)老地方牛肉麵食館\n",
-      "14 完成店名(info): 炸G行家-大龍峒店（炸雞行家.美式炸雞.平價美食）\n",
-      "14 完成店名(review)炸G行家-大龍峒店（炸雞行家.美式炸雞.平價美食）\n",
-      "15 完成店名(info): 三大牛肉麵\n",
-      "15 完成店名(review)三大牛肉麵\n",
-      "16 完成店名(info): 開燈找餐\n",
-      "16 完成店名(review)開燈找餐\n",
-      "17 完成店名(info): 大高雄燒肉飯\n",
-      "17 完成店名(review)大高雄燒肉飯\n",
-      "18 完成店名(info): 蕼蒔荳留\n",
-      "18 完成店名(review)蕼蒔荳留\n",
-      "19 完成店名(info): 大龍沙威瑪\n",
-      "19 完成店名(review)大龍沙威瑪\n",
-      "20 完成店名(info): 第一土鵝肉\n",
-      "20 完成店名(review)第一土鵝肉\n",
-      "21 完成店名(info): 小林麵食店\n",
-      "21 完成店名(review)小林麵食店\n",
-      "22 完成店名(info): 湯竺麵食館\n",
-      "23 完成店名(info): 大龍城自助餐\n",
-      "23 完成店名(review)大龍城自助餐\n",
-      "24 完成店名(info): 台南東山鴨頭\n",
-      "24 完成店名(review)台南東山鴨頭\n",
-      "25 完成店名(info): 大肥羴燒烤羊肉轉型（古早味麵店）\n",
-      "25 完成店名(review)大肥羴燒烤羊肉轉型（古早味麵店）\n",
-      "26 完成店名(info): 簡家大龍峒肉圓\n",
-      "27 完成店名(info): 大眾海鮮粥\n",
-      "27 完成店名(review)大眾海鮮粥\n",
-      "28 完成店名(info): 雙連 文記花枝焿\n",
-      "28 完成店名(review)雙連 文記花枝焿\n",
-      "29 完成店名(info): 老蔡水煎包 大龍創始店\n",
-      "29 完成店名(review)老蔡水煎包 大龍創始店\n",
-      "30 完成店名(info): 吉祥素食\n",
-      "31 完成店名(info): 重慶豆漿炸蛋餅\n",
-      "31 完成店名(review)重慶豆漿炸蛋餅\n",
-      "32 完成店名(info): 272早午餐\n",
-      "33 完成店名(info): 吉利 牛肉麵.水餃\n",
-      "33 完成店名(review)吉利 牛肉麵.水餃\n",
-      "34 完成店名(info): 大龍峒魚丸\n",
-      "35 完成店名(info): 叁道街手工蚵仔麵線\n",
-      "35 完成店名(review)叁道街手工蚵仔麵線\n",
-      "36 完成店名(info): 三媽臭臭鍋\n",
-      "37 完成店名(info): 大龍街271號黃金地瓜QQ球\n",
-      "37 完成店名(review)大龍街271號黃金地瓜QQ球\n",
-      "38 完成店名(info): 金好呷好吃雞肉飯\n",
-      "38 完成店名(review)金好呷好吃雞肉飯\n",
-      "39 完成店名(info): 新口味鹽酥雞\n",
-      "39 完成店名(review)新口味鹽酥雞\n",
-      "40 完成店名(info): 全龍健康素食\n",
-      "40 完成店名(review)全龍健康素食\n",
-      "41 完成店名(info): 尚品香早餐店（大龍店）\n",
-      "41 完成店名(review)尚品香早餐店（大龍店）\n",
-      "42 完成店名(info): 小里子海鮮\n",
-      "42 完成店名(review)小里子海鮮\n",
-      "43 完成店名(info): 雲祥麵食\n",
-      "43 完成店名(review)雲祥麵食\n",
-      "44 完成店名(info): 京品廣東粥\n",
-      "44 完成店名(review)京品廣東粥\n",
-      "45 完成店名(info): 潮味決‧湯滷專門店 台北大龍分社\n",
-      "46 完成店名(info): 唐山婆古早味炸肉\n",
-      "46 完成店名(review)唐山婆古早味炸肉\n",
-      "47 完成店名(info): 大龍早午餐\n",
-      "47 完成店名(review)大龍早午餐\n",
-      "48 完成店名(info): 大龍峒熊會長油飯\n",
-      "48 完成店名(review)大龍峒熊會長油飯\n",
-      "49 完成店名(info): 大龍街夜市-廟口的飯\n",
-      "49 完成店名(review)大龍街夜市-廟口的飯\n",
-      "50 完成店名(info): 果然文創\n",
-      "51 完成店名(info): 大龍峒一生懸命黑白切\n",
-      "52 完成店名(info): 梅滿美食\n",
-      "52 完成店名(review)梅滿美食\n",
-      "53 完成店名(info): 讚賞麵屋\n",
-      "54 完成店名(info): 弘爺漢堡\n",
-      "54 完成店名(review)弘爺漢堡\n",
-      "55 完成店名(info): 德龍飲食店\n",
-      "55 完成店名(review)德龍飲食店\n",
-      "56 完成店名(info): 寶師傅私房牛肉麵\n",
-      "56 完成店名(review)寶師傅私房牛肉麵\n",
-      "57 完成店名(info): 第一茗狀元糕\n",
-      "57 完成店名(review)第一茗狀元糕\n",
-      "58 完成店名(info): 萬世香小籠包豆漿店\n",
-      "58 完成店名(review)萬世香小籠包豆漿店\n",
-      "59 完成店名(info): 老麵店\n",
-      "59 完成店名(review)老麵店\n",
-      "60 完成店名(info): Q Burger 大同大龍店\n",
-      "60 完成店名(review)Q Burger 大同大龍店\n",
-      "61 完成店名(info): 圓環魯肉飯肉羹/大同區小吃 大同區美食 大同區滷肉飯 圓山美食 圓山小吃 圓山滷肉飯\n",
-      "61 完成店名(review)圓環魯肉飯肉羹/大同區小吃 大同區美食 大同區滷肉飯 圓山美食 圓山小吃 圓山滷肉飯\n",
-      "62 完成店名(info): 油條花生湯\n",
-      "63 完成店名(info): 5味臭臭鍋 大龍店\n",
-      "63 完成店名(review)5味臭臭鍋 大龍店\n",
-      "64 完成店名(info): 小漢堡早餐\n",
-      "64 完成店名(review)小漢堡早餐\n",
-      "65 完成店名(info): Camilla Breakfast\n",
-      "65 完成店名(review)Camilla Breakfast\n",
-      "66 完成店名(info): 便當及古早味什錦麵\n",
-      "66 完成店名(review)便當及古早味什錦麵\n",
-      "67 完成店名(info): 大龍街夜市\n",
-      "67 完成店名(review)大龍街夜市\n",
-      "68 完成店名(info): MILI 米麗廚房 大龍店\n",
-      "68 完成店名(review)MILI 米麗廚房 大龍店\n",
-      "69 完成店名(info): 美又堡\n",
-      "69 完成店名(review)美又堡\n",
-      "70 完成店名(info): 舉人豆花\n",
-      "70 完成店名(review)舉人豆花\n",
-      "71 完成店名(info): JOMO Coffee Roaster 大龍店｜台北手沖咖啡廳甜點推薦｜美式咖啡豆下午茶\n",
-      "71 完成店名(review)JOMO Coffee Roaster 大龍店｜台北手沖咖啡廳甜點推薦｜美式咖啡豆下午茶\n",
-      "72 完成店名(info): PASTA RISOTTO\n",
-      "72 完成店名(review)PASTA RISOTTO\n",
-      "73 完成店名(info): 讚好吃古早味雞蛋糕\n",
-      "73 完成店名(review)讚好吃古早味雞蛋糕\n",
-      "74 完成店名(info): 美珍豆漿早餐店\n",
-      "74 完成店名(review)美珍豆漿早餐店\n",
-      "75 完成店名(info): 綠境 Aroma\n",
-      "75 完成店名(review)綠境 Aroma\n",
-      "76 完成店名(info): 大叔食事unclefoodday\n",
-      "76 完成店名(review)大叔食事unclefoodday\n",
-      "77 完成店名(info): 大龍街鹹水雞 麻辣雞\n",
-      "77 完成店名(review)大龍街鹹水雞 麻辣雞\n",
-      "78 完成店名(info): 油飯小吃麵店\n",
-      "78 完成店名(review)油飯小吃麵店\n",
-      "79 完成店名(info): 傳統香滷味\n",
-      "79 完成店名(review)傳統香滷味\n",
-      "80 完成店名(info): 李記川味小吃店\n",
-      "80 完成店名(review)李記川味小吃店\n",
-      "81 完成店名(info): 川婆娘四川麻辣燙加熱滷味\n",
-      "81 完成店名(review)川婆娘四川麻辣燙加熱滷味\n",
-      "82 完成店名(info): 巨林美而美\n",
-      "82 完成店名(review)巨林美而美\n",
-      "83 完成店名(info): 日式日本風味料理\n",
-      "83 完成店名(review)日式日本風味料理\n",
-      "84 完成店名(info): 美立美早餐店\n",
-      "84 完成店名(review)美立美早餐店\n",
-      "85 完成店名(info): 大龍街阿忠碳烤店\n",
-      "85 完成店名(review)大龍街阿忠碳烤店\n",
-      "86 完成店名(info): 漁陶屋 日式料理\n",
-      "87 完成店名(info): 小鳳米粉湯\n",
-      "87 完成店名(review)小鳳米粉湯\n",
-      "88 完成店名(info): 大龍街米粉湯\n",
-      "88 完成店名(review)大龍街米粉湯\n",
-      "89 完成店名(info): 大龍峒阿嬤麵線店\n",
-      "90 完成店名(info): 裴記冷凍手工水餃\n",
-      "90 完成店名(review)裴記冷凍手工水餃\n",
-      "91 完成店名(info): 下路仔米苔目\n",
-      "91 完成店名(review)下路仔米苔目\n",
-      "92 完成店名(info): 八方雲集 (台北大龍店)\n",
-      "92 完成店名(review)八方雲集 (台北大龍店)\n",
-      "93 完成店名(info): D.G. Café\n",
-      "93 完成店名(review)D.G. Café\n",
-      "94 完成店名(info): 甜在心地瓜QQ球\n",
-      "95 完成店名(info): 牛奶好棒\n",
-      "96 完成店名(info): 鍋戰の物-大龍店\n",
-      "97 完成店名(info): KONMUSU日式飯糰（搬家中十一月底再開）\n",
-      "執行總花費時間: 956.7437703609467\n"
+      "45 完成店名(info): 唐山婆古早味炸肉\n",
+      "45 完成店名(review)唐山婆古早味炸肉\n",
+      "46 完成店名(info): 大龍早午餐\n",
+      "46 完成店名(review)大龍早午餐\n",
+      "47 完成店名(info): 大龍峒熊會長油飯\n",
+      "47 完成店名(review)大龍峒熊會長油飯\n",
+      "48 完成店名(info): 大龍街夜市-廟口的飯\n",
+      "48 完成店名(review)大龍街夜市-廟口的飯\n",
+      "49 完成店名(info): 果然文創\n",
+      "49 完成店名(review)果然文創\n",
+      "50 完成店名(info): 大龍峒一生懸命黑白切\n",
+      "51 完成店名(info): 梅滿美食\n",
+      "51 完成店名(review)梅滿美食\n",
+      "52 完成店名(info): 讚賞麵屋\n",
+      "53 完成店名(info): 弘爺漢堡\n",
+      "53 完成店名(review)弘爺漢堡\n",
+      "54 完成店名(info): 德龍飲食店\n",
+      "55 完成店名(info): 寶師傅私房牛肉麵\n",
+      "55 完成店名(review)寶師傅私房牛肉麵\n",
+      "56 完成店名(info): 第一茗狀元糕\n",
+      "56 完成店名(review)第一茗狀元糕\n",
+      "57 完成店名(info): 萬世香小籠包豆漿店\n",
+      "57 完成店名(review)萬世香小籠包豆漿店\n",
+      "58 完成店名(info): 老麵店\n",
+      "58 完成店名(review)老麵店\n",
+      "59 完成店名(info): Q Burger 大同大龍店\n",
+      "59 完成店名(review)Q Burger 大同大龍店\n",
+      "60 完成店名(info): 圓環魯肉飯肉羹/大同區小吃 大同區美食 大同區滷肉飯 圓山美食 圓山小吃 圓山滷肉飯\n",
+      "60 完成店名(review)圓環魯肉飯肉羹/大同區小吃 大同區美食 大同區滷肉飯 圓山美食 圓山小吃 圓山滷肉飯\n",
+      "61 完成店名(info): 油條花生湯\n",
+      "62 完成店名(info): 5味臭臭鍋 大龍店\n",
+      "62 完成店名(review)5味臭臭鍋 大龍店\n",
+      "63 完成店名(info): 小漢堡早餐\n",
+      "63 完成店名(review)小漢堡早餐\n",
+      "64 完成店名(info): Camilla Breakfast\n",
+      "64 完成店名(review)Camilla Breakfast\n",
+      "65 完成店名(info): 便當及古早味什錦麵\n",
+      "66 完成店名(info): 大龍街夜市\n",
+      "66 完成店名(review)大龍街夜市\n",
+      "67 完成店名(info): MILI 米麗廚房 大龍店\n",
+      "67 完成店名(review)MILI 米麗廚房 大龍店\n",
+      "68 完成店名(info): 美又堡\n",
+      "68 完成店名(review)美又堡\n",
+      "69 完成店名(info): 舉人豆花\n",
+      "69 完成店名(review)舉人豆花\n",
+      "70 完成店名(info): JOMO Coffee Roaster 大龍店｜台北手沖咖啡廳甜點推薦｜美式咖啡豆下午茶\n",
+      "70 完成店名(review)JOMO Coffee Roaster 大龍店｜台北手沖咖啡廳甜點推薦｜美式咖啡豆下午茶\n",
+      "71 完成店名(info): PASTA RISOTTO\n",
+      "71 完成店名(review)PASTA RISOTTO\n",
+      "72 完成店名(info): 讚好吃古早味雞蛋糕\n",
+      "72 完成店名(review)讚好吃古早味雞蛋糕\n",
+      "73 完成店名(info): 美珍豆漿早餐店\n",
+      "73 完成店名(review)美珍豆漿早餐店\n",
+      "74 完成店名(info): 綠境 Aroma\n",
+      "74 完成店名(review)綠境 Aroma\n",
+      "75 完成店名(info): 大叔食事unclefoodday\n",
+      "75 完成店名(review)大叔食事unclefoodday\n",
+      "76 完成店名(info): 大龍街鹹水雞 麻辣雞\n",
+      "76 完成店名(review)大龍街鹹水雞 麻辣雞\n",
+      "77 完成店名(info): 油飯小吃麵店\n",
+      "78 完成店名(info): 傳統香滷味\n",
+      "78 完成店名(review)傳統香滷味\n",
+      "79 完成店名(info): 李記川味小吃店\n",
+      "79 完成店名(review)李記川味小吃店\n",
+      "80 完成店名(info): 川婆娘四川麻辣燙加熱滷味\n",
+      "80 完成店名(review)川婆娘四川麻辣燙加熱滷味\n",
+      "81 完成店名(info): 巨林美而美\n",
+      "81 完成店名(review)巨林美而美\n",
+      "82 完成店名(info): 日式日本風味料理\n",
+      "82 完成店名(review)日式日本風味料理\n",
+      "83 完成店名(info): 美立美早餐店\n",
+      "83 完成店名(review)美立美早餐店\n",
+      "84 完成店名(info): 大龍街阿忠碳烤店\n",
+      "84 完成店名(review)大龍街阿忠碳烤店\n",
+      "85 完成店名(info): 漁陶屋 日式料理\n",
+      "85 完成店名(review)漁陶屋 日式料理\n",
+      "86 完成店名(info): 小鳳米粉湯\n",
+      "86 完成店名(review)小鳳米粉湯\n",
+      "87 完成店名(info): 大龍街米粉湯\n",
+      "87 完成店名(review)大龍街米粉湯\n",
+      "88 完成店名(info): 大龍峒阿嬤麵線店\n",
+      "88 完成店名(review)大龍峒阿嬤麵線店\n",
+      "89 完成店名(info): 裴記冷凍手工水餃\n",
+      "89 完成店名(review)裴記冷凍手工水餃\n",
+      "90 完成店名(info): 下路仔米苔目\n",
+      "90 完成店名(review)下路仔米苔目\n",
+      "91 完成店名(info): 八方雲集 (台北大龍店)\n",
+      "91 完成店名(review)八方雲集 (台北大龍店)\n",
+      "92 完成店名(info): D.G. Café\n",
+      "92 完成店名(review)D.G. Café\n",
+      "93 完成店名(info): 甜在心地瓜QQ球\n",
+      "94 完成店名(info): 牛奶好棒\n",
+      "95 完成店名(info): 鍋戰の物-大龍店\n",
+      "96 完成店名(info): KONMUSU日式飯糰（搬家中十一月底再開）\n",
+      "執行總花費時間: 468.62075543403625\n"
      ]
     }
    ],
