--- a/GoogleMaps勿刪_最終版.ipynb
+++ b/GoogleMaps勿刪_最終版.ipynb
@@ -215,7 +215,7 @@
     "    \n",
     "    end = time.time()\n",
     "    print(f'第{index}筆 {link},總共有:{counter}筆,已寫入完成')\n",
-    "    print(\"process_time 測量時間：%f 秒\\\" % (end - start))\n",
+    "    print(\"process_time 測量時間：%f 秒\\" % (end - start))\n",
     "    \n",
     "    driver.quit()\n",
     "\n",
