--- a/url_data_analysis.ipynb
+++ b/url_data_analysis.ipynb
@@ -20,13 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "82570476",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_song = pd.read_csv('松山區餐廳.csv', header=None)\n",
-    "df_chung = pd.read_csv('中山區餐廳.csv', header=None)"
+    "df_song = pd.read_csv('./data/url/restaurant/松山區餐廳.csv', header=None)\n",
+    "df_chung = pd.read_csv('./data/url/restaurant/中山區餐廳.csv', header=None)"
    ]
   },
   {
@@ -34,12 +34,12 @@
    "id": "02cbcc49",
    "metadata": {},
    "source": [
-    "### 松山區:72763筆url"
+    "### 松山區:132403筆url"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "c02dcc01",
    "metadata": {
     "scrolled": true
@@ -48,10 +48,10 @@
     {
      "data": {
       "text/plain": [
-       "(72763, 1)"
+       "(132403, 1)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,22 +65,24 @@
    "id": "5cd3af01",
    "metadata": {},
    "source": [
-    "### 中山區: 114696筆url"
+    "### 中山區: 219859筆url"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "cc1005ed",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(114696, 1)"
+       "(219859, 1)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "3c12ec01",
    "metadata": {},
    "outputs": [],
@@ -109,17 +111,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "887bbe6c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(187459, 1)"
+       "(352262, 1)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "94b3f0a3",
    "metadata": {},
    "outputs": [],
@@ -148,17 +150,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "3bf52c46",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(13670, 1)"
+       "(17790, 1)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "99fafc91",
    "metadata": {
     "scrolled": true
@@ -189,17 +191,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "2c8ea285",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(12006, 1)"
+       "(15642, 1)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,13 +211,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7247bcce",
+   "metadata": {},
+   "source": [
+    "# 讀json"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "f0767450",
+   "execution_count": 11,
+   "id": "26c0f196",
    "metadata": {},
    "outputs": [],
    "source": [
-    "list = [\n",
+    "json_list = [\n",
     "    {\n",
     "        \"href\":[1,2,3]\n",
     "    }\n",
@@ -224,8 +234,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "a6e77ce3",
+   "execution_count": 12,
+   "id": "aaaf2f29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,9 +244,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "id": "990b29db",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -286,7 +298,7 @@
        "2     3"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,6 +306,14 @@
    "source": [
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecf57cad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -312,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
