--- a/餐廳資料二次分析.ipynb
+++ b/餐廳資料二次分析.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "ee075062",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "13a4de26",
    "metadata": {},
    "outputs": [
@@ -153,13 +153,13 @@
        "1             2022-11-22            1      1_樂山窄巷  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfFilter = pd.read_csv(\"篩完類別後的餐廳/place_info_final_3.csv\")\n",
+    "dfFilter = pd.read_csv(\"Data/raw_data/restaurant/place_info/篩完類別後的餐廳/place_info_final_3.csv\")\n",
     "pd.set_option('max_colwidth',40)\n",
     "pd.set_option('display.max_columns',40)\n",
     "print(dfFilter.shape)\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "741fe503",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
        "1             2022-11-22            1      1_樂山窄巷          北投區  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "eeae9e0b",
    "metadata": {},
    "outputs": [],
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "bb3e1cf6",
    "metadata": {
     "scrolled": true
@@ -442,7 +442,7 @@
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "f15361a2",
    "metadata": {},
    "outputs": [
@@ -584,7 +584,7 @@
        "1             2022-11-22            1      1_樂山窄巷          北投區           4  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "084a1bc3",
    "metadata": {},
    "outputs": [],
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "16055bb4",
    "metadata": {},
    "outputs": [],
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "b9c43a7c",
    "metadata": {},
    "outputs": [
@@ -760,7 +760,7 @@
        "1  1001-2000  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "ef0c501b",
    "metadata": {},
    "outputs": [
@@ -878,7 +878,7 @@
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "e85f7ee5",
    "metadata": {},
    "outputs": [
@@ -937,7 +937,7 @@
        "Length: 100, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "936901cf",
    "metadata": {
     "scrolled": true
@@ -993,7 +993,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mason89823\\AppData\\Local\\Temp\\ipykernel_17084\\1230275820.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\mason89823\\AppData\\Local\\Temp\\ipykernel_20944\\1230275820.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  print(dfFilter[[\"place_category\",\"place_name\"]][dfFilter[\"place_category\"]==\"熟食店\"][dfFilter[\"eat_in\"]==0].iloc[0:100,])\n"
      ]
     }
@@ -1016,19 +1016,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "id": "e39f11fa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    星期二、11:00 到 21:00; 星期三、11:00 到 21:00; 星期四、11:00 到 21:00; 星期五、11:00 到 21:00; 星期六、11:00 到 21:00; 星...\n",
-       "1    星期二、11:00 到 14:30、17:00 到 20:30; 星期三、11:00 到 14:30、17:00 到 20:30; 星期四、11:00 到 14:30、17:00 到 20:3...\n",
+       "0    星期二、11:00 到 21:00; 星期三、11:00 到 21:00...\n",
+       "1    星期二、11:00 到 14:30、17:00 到 20:30; 星期三...\n",
        "Name: opening_hours, dtype: object"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "id": "938e5d06",
    "metadata": {},
    "outputs": [],
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "id": "802a434f",
    "metadata": {},
    "outputs": [],
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 19,
    "id": "d8b8b0ae",
    "metadata": {
     "scrolled": true
@@ -1080,7 +1080,7 @@
        "Name: opening_hours, dtype: object"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "id": "86a2da59",
    "metadata": {},
    "outputs": [],
@@ -1114,16 +1114,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 36,
    "id": "7df94452",
    "metadata": {},
    "outputs": [],
    "source": [
     "def check_business_hours(week_list):\n",
     "    \n",
-    "    one  = [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1]\n",
-    "    zero = [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0]\n",
-    "\n",
+    "    # 宣告為tuple，避免被改值\n",
+    "    one  = (1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1)\n",
+    "    zero = (0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0)\n",
+    "    \n",
+    "    # 宣告變數存相對應的字串\n",
     "    str_monday    = str([s for s in week_list if \"星期一\" in s])\n",
     "    str_tuesday   = str([s for s in week_list if \"星期二\" in s])\n",
     "    str_wednesday = str([s for s in week_list if \"星期三\" in s])\n",
@@ -1135,18 +1137,26 @@
     "    str_week = [str_monday,str_tuesday,str_wednesday,str_thursday,str_friday,str_saturday,str_sunday]\n",
     "    \n",
     "    openHour_0_1_list =[]\n",
+    "    listt = []\n",
     "    \n",
     "    for day in str_week:\n",
     "        \n",
     "        time = re.sub(r':\\d\\d','',day)\n",
     "        time = re.findall(r'\\d\\d', time)\n",
     "        time = list(map(int, time)) #str轉int\n",
-    "        time\n",
+    "        \n",
+    "        if len(time) == 0:\n",
+    "            listt = list(zero)\n",
+    "            \n",
+    "        elif len(time) == 1:\n",
+    "            listt = list(one)\n",
     "    \n",
-    "        if len(time) > 0:\n",
+    "        elif len(time) > 1:\n",
+    "            \n",
     "            # 晚上營業時間沒有跨日\n",
     "            if time[-1] - time[0] > 0:\n",
-    "                listt = zero\n",
+    "                listt = list(zero)\n",
+    "                \n",
     "                if len(time) >= 2:\n",
     "                    listt[time[0]:time[1]] = np.ones(time[1]-time[0])\n",
     "\n",
@@ -1158,12 +1168,12 @@
     "\n",
     "                            if len(time) >= 8:\n",
     "                                listt[time[6]:time[7]] = np.ones(time[7]-time[6])\n",
-    "            else:\n",
-    "                listt = one\n",
+    "           \n",
     "        \n",
-    "            #晚上營業時間跨日    \n",
+    "            # 晚上營業時間跨日    \n",
     "            if time[-1] - time[0] < 0:\n",
-    "                listt = one\n",
+    "                listt = list(one)\n",
+    "                \n",
     "                if len(time) >= 2:\n",
     "                    listt[time[-1]:time[0]] = np.zeros(abs(time[-1]-time[0]))\n",
     "\n",
@@ -1175,9 +1185,6 @@
     "\n",
     "                            if len(time) >= 8:\n",
     "                                listt[time[5]:time[6]] = np.zeros(abs(time[6]-time[5]))\n",
-    "\n",
-    "        else:\n",
-    "            listt = zero\n",
     "            \n",
     "        openHour_0_1_list.append(listt)\n",
     "    return openHour_0_1_list\n"
@@ -1185,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 37,
    "id": "9dee7f36",
    "metadata": {},
    "outputs": [],
@@ -1219,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 38,
    "id": "91b4e1de",
    "metadata": {},
    "outputs": [
@@ -1377,7 +1384,7 @@
        "1  [0, 0, 0, 0, 0, ...  [0, 0, 0, 0, 0, ...  [0, 0, 0, 0, 0, ...  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1389,35 +1396,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 40,
    "id": "10961761",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0            [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0, 0, 0]\n",
-       "1                    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1.0, 1.0, 1.0, 0, 0, 0, 1.0, 1.0, 1.0, 0, 0, 0, 0]\n",
-       "2                  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1.0, 1.0, 1.0, 0, 0, 0, 1.0, 1.0, 1.0, 1.0, 0, 0, 0]\n",
-       "3                    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1.0, 1.0, 1.0, 0, 0, 0, 1.0, 1.0, 1.0, 0, 0, 0, 0]\n",
-       "4          [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0, 0]\n",
-       "                                                       ...                                               \n",
-       "25140                    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1.0, 1.0, 0, 0, 0, 0, 1.0, 1.0, 0, 0, 0, 0, 0]\n",
-       "25141    [0, 0, 0, 0, 0, 0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0, 0, 0, 0, 0, 0]\n",
-       "25142                            [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-       "25143                  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1.0, 1.0, 1.0, 0, 0, 0, 1.0, 1.0, 0, 0, 0, 0, 0]\n",
-       "25144              [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1.0, 1.0, 1.0, 1.0, 0, 0, 1.0, 1.0, 1.0, 0, 0, 0, 0, 0]\n",
-       "Name: Monday, Length: 25145, dtype: object"
+       "'星期三、休息; 星期四、11:30 到 16:00、17:00 到 20:00; 星期五、11:30 到 16:00、17:00 到 20:00; 星期六、11:30 到 16:00、17:00 到 20:00; 星期日、11:30 到 16:00、17:00 到 20:00; 星期一、11:30 到 16:00、17:00 到 20:00; 星期二、11:30 到 16:00、17:00 到 20:00. 隱藏本週營業時間'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.set_option(\"max_colwidth\",100)\n",
-    "dfFilter[\"Monday\"]"
+    "dfFilter[\"opening_hours\"][12437]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "987e9567",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfFilter[\"Wednesday\"][12437]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "91f421ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = dfFilter.iloc[:,1:]\n",
+    "df.to_csv(\"Data/初步分析後的df/place_info_add_business_hours.csv\",index = None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdb2c440",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df11 = pd.read_csv(\"Data/JT\")"
    ]
   },
   {
